Fix buggy and slow live scroll on mobile. Closes #190

--- a/src/styles/live.scss
+++ b/src/styles/live.scss
@@ -4,7 +4,7 @@
 		top:0px;
 		bottom:0;
 		width:100%;
-		position:absolute;
+		position: fixed;
 		justify-content: center;
 		overflow:auto;
 	}
