--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -119,25 +119,28 @@ a{
 	text-align: left;
 	color: white;
 	position: relative;
-    overflow: hidden;
+	overflow: hidden;
+	-webkit-overflow-scrolling: touch;
 
 	&::before{
 		box-shadow: 0px 189px 75px -60px $bgColor inset;
-		position: absolute;
+		position: fixed;
 		width: 100%;
 		height: 180px;
 		content: ' ';
 		z-index:10;
+		pointer-events: none;
 	}
 
 	&::after{
 		box-shadow:0px -135px 120px -60px $bgColor inset;
-		position: absolute;
+		position: fixed;
 		width: 100%;
 		height: 100px;
 		bottom:0;
 		content: ' ';
 		z-index:10;
+		pointer-events: none;
 	}
 
 	.hide-scroll-hack {
@@ -217,7 +220,7 @@ a{
 				}
 				&.subscribed{
 					.title:after{
-						
+
 						content:"\f024";
 						font-size: 13px;
 						vertical-align: super;
@@ -235,7 +238,7 @@ a{
 }
 
 .countdown{
-	position:relative;
+	position: fixed;
 	text-align: center;
 	margin-top: 65px;
 	font-family: Orbitron;
@@ -243,7 +246,8 @@ a{
 	flex: 1 1 0;
 	&.show-when-small{
 		z-index: 30;
-		position:absolute;
+		position: fixed;
+		pointer-events: none;
 	}
 
 	div{
